Sun Feb 28 21:11:21 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* rewrote the root finding functions in an iterative framework

Tue Nov 17 16:47:09 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* secant.c, falsepos.c newton.c: added gsl_math.h to included
 	headers to import GSL_MAX and GSL_MIN

Mon Nov  9 21:21:45 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* roots.h: got rid of local MAX(a,b) and MIN(a,b) definitions
 	since they are now in config.h

Wed Nov  4 16:08:32 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c (test_brent): allow the brent tests to run for more
 	iterations since they take longer on the pathological cases.

	* brent.c (gsl_root_brent): on each iteration keep track of
 	current best estimates of the root and the bounds so that they are
 	returned to the user if the function exits prematurely.

	clean up the brent algorithm based on remarks in the original
 	paper

Mon Oct 26 16:31:21 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* in all routines with upper and lower bounds if a root is found
 	exactly then the bracket is collapsed onto the root instead of
 	being untouched.

Thu Oct 15 13:59:30 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* bisection.c, falsepos.c, secant.c: reordered the tests so that
 	the minimum number of function evaluations are performed when
 	there is an early exit due to one of the supplied limits lying on
 	a root.

Fri Aug 21 14:48:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c: clean up of tests to get rid of warnings

Thu Aug 20 10:21:15 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* roots.h (_WITHIN_TOL): added extra parens in macro definition,
 	for safety

	* falsepos.c (gsl_root_falsepos): removed test for absolute
 	equality and replaced by a flag indicating which variables
 	changed.

	* test.c (main): simplified the tests, removed command line
 	arguments (can use the debugger to select which ones to run)

Mon Jun 15 22:22:54 1998  Brian Gough  <bjg@vvv.lanl.gov>
